name:                  cardano-rt-view
version:               0.3.0
description:           Real-time watching for Cardano nodes
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
cabal-version:         >= 1.10

library
  hs-source-dirs:      src

  exposed-modules:     Cardano.RTView
                       Cardano.RTView.CLI
                       Cardano.RTView.Config

                       Cardano.RTView.Acceptor

                       Cardano.RTView.ErrorBuffer

                       Cardano.RTView.GUI.CSS.Style
                       Cardano.RTView.GUI.Elements
                       Cardano.RTView.GUI.JS.Charts
                       Cardano.RTView.GUI.JS.Utils
                       Cardano.RTView.GUI.Markup.Notifications
                       Cardano.RTView.GUI.Markup.OwnInfo
                       Cardano.RTView.GUI.Markup.PageBody
                       Cardano.RTView.GUI.Markup.Pane
                       Cardano.RTView.GUI.Updater

                       Cardano.RTView.NodeState.CSV
                       Cardano.RTView.NodeState.Parsers
                       Cardano.RTView.NodeState.Types
                       Cardano.RTView.NodeState.Updater

                       Cardano.RTView.Notifications.CheckEvents
                       Cardano.RTView.Notifications.Send
                       Cardano.RTView.Notifications.Send.Email
                       Cardano.RTView.Notifications.Types

                       Cardano.RTView.SupportedNodes

                       Cardano.RTView.WebServer

  other-modules:       Paths_cardano_rt_view

  build-depends:       aeson
                     , aeson-pretty
                     , ansi-terminal
                     , async
                     , base >=4.12 && <5
                     , bytestring
                     , cardano-config
                     , clay
                     , cassava
                     , deepseq
                     , directory
                     , extra
                     , filepath
                     , formatting
                     , hashable
                     , iohk-monitoring
                     , lobemo-backend-trace-acceptor
                     , mime-mail
                     , optparse-applicative
                     , smtp-mail == 0.3.0.0
                     , stm
                     , text
                     , threepenny-gui
                     , time
                     , unordered-containers

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       ScopedTypeVariables

  ghc-options:         -Wall
                       -fno-warn-all-missed-specialisations
                       -fno-warn-implicit-prelude
                       -fno-warn-missing-import-lists
                       -fno-warn-orphans
                       -fno-warn-safe
                       -fno-warn-unsafe

executable cardano-rt-view
  hs-source-dirs:      app
  main-is:             cardano-rt-view.hs

  other-modules:       Paths_cardano_rt_view

  build-depends:       base >=4.12 && <5
                     , cardano-rt-view
                     , optparse-applicative
                     , text
  if os(windows)
    build-depends:     Win32

  default-language:    Haskell2010

  ghc-options:         -threaded
                       -Wall
                       -rtsopts
                       "-with-rtsopts=-T"

test-suite cardano-rt-view-test
  hs-source-dirs:      test/suite
  main-is:             cardano-rt-view-test.hs

  other-modules:       Test.Cardano.RTView.HtmlCheck

  type:                exitcode-stdio-1.0

  build-depends:       base >=4.12 && <5
                     , cardano-rt-view
                     , tasty
                     , tasty-hunit
                     , threepenny-gui

  default-language:    Haskell2010
