cabal-version:       >=1.10
name:                rt-view-analyzer
version:             0.2.0
description:         HTML page analyzer for RTView automatic testing
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
build-type:          Simple
extra-source-files:  README.md

executable rt-view-analyzer
  main-is:             Main.hs
  other-modules:       Analyzers
                       CLI
                       Config
  -- other-extensions:
  build-depends:       base >=4.12 && <4.14,
                       cardano-rt-view,
                       iohk-monitoring,
                       text,
                       webdriver
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

  ghc-options:         -Wall -Werror
                       -rtsopts
                       "-with-rtsopts=-T"
